@@ -17,6 +17,7 @@ Bugs fixed:
 - 1567676 Fixed several memory leaks
 - 1592037 Fixed ClArray creation issues
 - 1592760 Fixed PROPERTY.ARRAY creation fails
+- 1593220 Fixed bug in setQualifier
 
 Changes in 1.1.1
 ================
